# Jakips

./: README.md  _config.yml  firstcod.py  firstipynb.ipynb
Lab(2)/: README.md  code.py  code_ai.ipynb
lab 5/: REEADME.md  abstraction.py  emulation.py  encapsulation.py  paradigm.py  polymorphism.py
lab3/: README.md  py_class.py  user.txt
lab4/: README.md  task.ipynb
lab7.1/: README.md  pyproject.toml
lab7.1/conversation_agent/: agent.py
lab7.1/creative_writer/: agent.py
lab7.1/logging_agent/: agent.py
lab7.1/math_agent/: agent.py
lab7.1/my_firsy_agent/: agent.py
lab7.1/student_helper/: agent.py
lab7.1/tools/: common_tools.py
lab7.2/: READM.md  README.md  _config.yml  index.md
labo2/: firstipyn.ipynb
