[project]
name = "6-laba"
version = "0.1.0"
description = ""
authors = [
    {name = "danik322",email = "danylobucharov@gmail.com"}
]
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "google-adk (>=1.32.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"